--- a/estilo/style.css
+++ b/estilo/style.css
@@ -143,7 +143,7 @@ section#produto{
 }
  section#prod{
     background-color: var(--cor7);
-    width: 90%;
+    width: 95%;
     
  }
  section#prod h2{
@@ -161,7 +161,7 @@ section#produto{
 
  div#container{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center ;
@@ -174,18 +174,29 @@ div.item{
     background-color: var(--cor3);
     width: 200px;
     box-sizing: border-box;
-    height: 200px;
+    height: 230px;
     margin: 7px;
     border: 1px solid white;
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 20px;
+    position: relative;
 }
 
-div.item p{
-
+.item p{
+    position: absolute;
+    background-color: white;
+    color: black;
+    height: 70px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    margin:-10px;
+    text-align: center;
+    padding-top: 10px;
 }
-
 
 
 
