--- a/estilo/style.css
+++ b/estilo/style.css
@@ -56,7 +56,8 @@ header h1{
 }
 
 header img{
-    width: 50px;
+    width: 48px;
+    height: 48px;
     padding: 10px;
 }
 
@@ -160,11 +161,9 @@ section#produto{
  }
 
  div#container{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 10px;
     margin: auto;
     
