--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+/* versão mobible first*/
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+PE:wght@100..400&display=swap');
@@ -69,10 +71,26 @@ img#menu{
     margin-left: 3px;
 }
 
+nav#nav-menu {
+    display: none; /* Esconde o menu por padrão */
+}
+
+nav#nav-menu a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+}
+
+nav#nav-menu a:hover {
+    background-color: #f0f0f0;
+}
+
+/*
 nav a#cabeçalho-home {display: none;}
 nav a#cabeçalho-prod {display: none;}
 nav a#cabeçalho-fale-c {display: none;}
-nav a#cabeçalho-login {display: none;}
+nav a#cabeçalho-login {display: none;}*/
 
 section#principal{
     background-image: linear-gradient(to right, var(--cor4), var(--cor5));
