--- a/estilos/Media-Query.css
+++ b/estilos/Media-Query.css
@@ -30,7 +30,7 @@ grandes telas: acima de 1200 */
 }
 
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
     header{
         display: flex;
         justify-content: space-between;
@@ -72,7 +72,7 @@ grandes telas: acima de 1200 */
         height: 48px;
     }
 
-    @media (min-width: 768px) and (max-width: 992px) {
+    @media screen and(min-width: 768px) and (max-width: 992px) {
         header {
             height: 70px;
             display: flex;
@@ -112,4 +112,177 @@ grandes telas: acima de 1200 */
         }
     }
     
+}
+
+
+
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+
+    header{
+        display: flex;
+        justify-content: space-between;
+        
+    }
+
+    #header-content h1{
+        
+        
+    }
+    img#menu{
+        display: none;
+    }
+
+    nav#nav-menu {
+        display: flex; /* Esconde o menu por padrão */
+        justify-content: center;
+        align-items: center;     
+    }
+
+    img#carrinho{
+    }
+
+    nav a{
+        text-decoration: none;
+        color: black;
+        padding: 10px;
+        margin: 10px;
+        padding: 8px 10px 10px 8px ;
+        font-weight: bold;
+        font-size: 1.3em;
+        font-family: var(--font2);
+        height: 20px;
+        
+    }
+    
+    nav a:hover{
+    
+    }
+    
+    img#carrinho{
+        width: 40px;
+        margin-right: 50px;
+    }
+    
+    section#principal{
+        flex-direction: row;
+        justify-content:space-between;
+    }
+
+    div#titulo{
+        width: 50%;
+        padding: 20px;
+    }
+
+    #img-container{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+    }
+    #img-principal{
+        max-width: 80%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    header{
+        display: flex;
+        
+    }
+
+    #header-content > h1{
+        margin : 0px;
+        
+    }
+    img#menu{
+        display: none;
+    }
+
+    nav#nav-menu {
+        display: flex; 
+        justify-content: center;
+        align-items: center;     
+    }
+
+    img#carrinho{
+    }
+
+    nav a{
+        text-decoration: none;
+        color: black;
+        padding: 10px;
+        margin: 10px;
+        padding: 8px 10px 10px 8px ;
+        font-weight: bold;
+        font-size: 1.3em;
+        font-family: var(--font2);
+        height: 20px;
+        
+    }
+    
+    nav a:hover{
+    
+    }
+    
+    img#carrinho{
+        width: 40px;
+        margin-right: 50px;
+    }
+    
+    section#principal{
+        flex-direction: row;
+        justify-content:space-between;
+    }
+
+    div#titulo{
+        width: 40%;
+        padding: 20px;
+    }
+
+    div#titulo h1{
+        font-size: 2.5em;
+    }
+
+    div#titulo h2{
+        font-size: 1.7em;
+    }
+
+    div#titulo p{
+        font-size: 1.5em;
+    }
+
+    .redes-sociais{
+        width: 60px;
+        border-radius: 50%;
+        border: 2px solid white;
+        margin: 15px;
+    }
+
+    #img-container{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+    }
+    #img-principal{
+        max-width: 80%;
+    }
+
+    div#container{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+    
+    
+    }
+    
+    div.item{
+        position: relative;
+        background-color: var(--cor3);
+        border: 1px solid rgba(0, 0, 0, 0.781);
+        border-radius: 10px;
+        box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.329);
+        width: 100%; /* Ajusta a largura para preencher a coluna */
+        max-width: 210px; /* Garante que não ultrapasse a largura máxima */
+        height: 260px;
+        text-align: center;
+        text-decoration: none;
+    }
 }
