--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,6 +41,8 @@ header{
     justify-content: center;
     align-items: center;
     position: relative;
+    box-shadow:  1px 1px 10px rgba(0, 0, 0, 0.404);
+
 }
 
 
@@ -49,7 +51,7 @@ header h1{
     font-family: var(--font1);
     font-size: 1.5em;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.479);
-    margin: 0 auto;
+    margin: auto;
 }
 
 header img{
