--- a/estilos/style.css
+++ b/estilos/style.css
@@ -193,7 +193,7 @@ div.item{
     background-color: var(--cor3);
     width: 200px;
     box-sizing: border-box;
-    height: 230px;
+    height: 270px;
     margin: 7px;
     border: 1px solid white;
     border-radius: 10px;
@@ -203,11 +203,11 @@ div.item{
     box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.158);
 }
 
-.item p{
+.item .nomeProduto{
     position: absolute;
     background-color: white;
     color: black;
-    height: 70px;
+    height: 100px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     bottom: 10px;
@@ -218,9 +218,33 @@ div.item{
     padding-top: 10px;
 }
 
-.img-prod{
-    width: 10px;
+.nomeProduto > p{
+    color: black;
+}
+
+div.img-prod > img{
+    width: 100%;
+    height: 150px;
+    background-size: cover;
+    background-position: center;
     
+}
+
+
+#addToCart{
+    width: 150px;
+    height: 30px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 5px;
+    background-color: var(--cor4);
+    
+    
+
+    
+
 }
 
 footer{
